Contact email Update

--- a/public/index.html
+++ b/public/index.html
@@ -80,8 +80,8 @@
     		</div>
     		<div class="row">
 				<div class="col-md-4 col-md-offset-2" style="margin-left:10%; color:white; position:relative; text-align:center; ">
-					<p style="font-size:135%;">Share. &nbsp Connect. &nbsp Collaborate. &nbsp Instantly.</p>
-					<p style="font-size:135%;">Completely local.  &nbsp No check-ins. &nbsp  No GPS.</p>
+					<p style="font-size:135%;">Connect to the Right Here, Right Now</p>
+					<p style="font-size:135%;">No need for friends, followers, or check-ins</p>
     			</div>
     		
     		</div>
@@ -109,7 +109,7 @@
 					<div class="section-heading">
 					<h2>About us</h2>
 
-					<p> With StreamMe, as you travel from place to place you have access to any photo streams around you. You can view all of the photos submitted by users so far and add your own pictures to them until the stream expires. </p><p>If there isn't a stream you're interested in, you can start your own! A stream's range grows as more users interact with it.</p><p> See how many people you can get on your stream!</p>
+					<p> With StreamMe, you know what is happening around you, right now. StreamMe creates ad-hoc networks around groups of nearby users, allowing users to share content with all connected users. </p><p>Start a stream for a small gathering you're hosting, and all guests will be notified of the stream as they arrive! Or join a stream for your favorite sports team while tailgating or watching in the stands. You can view all of the photos submitted by users so far and add your own pictures to any streams you have access to until the stream expires. </p><p>If there isn't a stream you're interested in, you can start your own! A stream's range grows as more users interact with it.</p><p> See how many people you can get on your stream!</p>
 					
 					</div>
 					</div>
@@ -290,7 +290,10 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="boxed-grey">
-                <form id="contactform" method="post" action="js/sendemail.php"  onsubmit="return validation();">
+            	<p>
+            	Use the form below, or click <a href="mailto:help@StreamMe.co?subject=Web Email">here</a> to contact us.
+            	</p>
+                <form id="contactform" method="post" action="js\sendemail.php"  onsubmit="return validation();">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
